--- a/app/src/main/res/layout/fragment_user_order.xml
+++ b/app/src/main/res/layout/fragment_user_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/order"
+    android:background="@drawable/usr_order"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over"
     tools:context=".UserOrderFragment">
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="60dp"
             android:fontFamily="@font/sonsie_one"
             android:text="My Orders"
             android:textAlignment="center"
@@ -60,7 +60,7 @@
         <ListView
             android:id="@+id/User_Orders_ListView"
             android:layout_width="386dp"
-            android:layout_height="340dp"
+            android:layout_height="291dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
