--- a/app/src/main/res/layout/all_orders_list_bar_item.xml
+++ b/app/src/main/res/layout/all_orders_list_bar_item.xml
@@ -10,8 +10,8 @@
         android:id="@+id/profile_image"
         android:layout_width="69dp"
         android:layout_height="70dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,30 +20,30 @@
 
     <TextView
         android:id="@+id/list_item_name"
-        android:layout_width="40dp"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
         android:layout_margin="20dp"
-        android:layout_marginStart="52dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/comfortaa_light"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/profile_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/list_item_price"
-        android:layout_width="99dp"
+        android:layout_width="wrap_content"
         android:layout_height="47dp"
         android:layout_margin="20dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="16dp"
         android:layout_toRightOf="@id/list_item_name"
         android:fontFamily="@font/comfortaa_light"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/list_item_name"
         app:layout_constraintTop_toTopOf="parent" />
