--- a/app/src/main/res/layout/fragment_table_order.xml
+++ b/app/src/main/res/layout/fragment_table_order.xml
@@ -43,7 +43,7 @@
         <TextView
             android:id="@+id/topicTxtView"
             android:layout_width="371dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="60dp"
