--- a/app/src/main/res/layout/all_orders_list_bar_item.xml
+++ b/app/src/main/res/layout/all_orders_list_bar_item.xml
@@ -21,7 +21,7 @@
     <TextView
         android:id="@+id/list_item_name"
         android:layout_width="wrap_content"
-        android:layout_height="42dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="24dp"
@@ -34,7 +34,7 @@
     <TextView
         android:id="@+id/list_item_price"
         android:layout_width="wrap_content"
-        android:layout_height="47dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="15dp"
@@ -43,9 +43,26 @@
         android:fontFamily="@font/comfortaa_light"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.684"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/list_item_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/list_item_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="16dp"
+        android:layout_toRightOf="@id/list_item_price"
+        android:fontFamily="@font/comfortaa_light"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.684"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_item_price"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
