--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/architects_daughter</item>
         <item>@font/bungee_shade</item>
+        <item>@font/chewy</item>
         <item>@font/comfortaa_light</item>
         <item>@font/holtwood_one_sc</item>
         <item>@font/luckiest_guy</item>
