--- a/app/src/main/res/layout/fragment_pepole_reviews.xml
+++ b/app/src/main/res/layout/fragment_pepole_reviews.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/reviewsTextView"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:layout_marginEnd="8dp"
@@ -30,21 +30,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.github.siyamed.shapeimageview.StarImageView
-            android:layout_width="131dp"
-            android:layout_height="126dp"
-            android:layout_margin="8dp"
-            android:layout_marginBottom="8dp"
+
+        <ListView
+            android:id="@+id/People_Reviews_ListView"
+            android:layout_width="match_parent"
+            android:layout_height="377dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:src="#fae84a"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            app:siBorderColor="@android:color/background_dark"
-            app:siBorderWidth="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/reviewsTextView" />
 
     </android.support.constraint.ConstraintLayout>
 
