--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tiki"
+    android:background="@drawable/food1"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over">
 
@@ -17,7 +17,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="@font/bungee_shade"
         android:textAlignment="center"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_dark"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:background="@drawable/button_border"
         android:fontFamily="@font/architects_daughter"
         android:text="MENU"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_dark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         android:background="@drawable/button_border"
         android:fontFamily="@font/architects_daughter"
         android:text="REVIEWS"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_dark"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,13 +79,13 @@
         android:id="@+id/TableBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_border"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button_border"
         android:fontFamily="@font/architects_daughter"
         android:text="TABLE"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_dark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +102,7 @@
         android:background="@drawable/button_border"
         android:fontFamily="@font/architects_daughter"
         android:text="SIGN OUT"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/background_dark"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
