--- a/app/src/main/res/layout/fragment_chat__bar_.xml
+++ b/app/src/main/res/layout/fragment_chat__bar_.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".OnlineUsersFragment"
-    android:background="@drawable/new_chat"
+    android:background="@drawable/online"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over">
 
@@ -16,10 +16,10 @@
         <ListView
             android:id="@+id/Online_Users_ListView"
             android:layout_width="match_parent"
-            android:layout_height="377dp"
+            android:layout_height="381dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
