--- a/app/src/main/res/layout/fragment_pepole_reviews.xml
+++ b/app/src/main/res/layout/fragment_pepole_reviews.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PeopleReviewsFragment"
-    android:background="@drawable/review"
+    android:background="@drawable/people"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over">
 
@@ -17,9 +17,8 @@
         <TextView
             android:id="@+id/reviewsTextView"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="60dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="@font/chewy"
             android:text="Reviews"
             android:textAlignment="center"
@@ -33,14 +32,11 @@
 
         <ListView
             android:id="@+id/People_Reviews_ListView"
-            android:layout_width="match_parent"
+            android:layout_width="323dp"
             android:layout_height="377dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/reviewsTextView" />
 
     </android.support.constraint.ConstraintLayout>
