--- a/app/src/main/res/layout/fragment_personal_review.xml
+++ b/app/src/main/res/layout/fragment_personal_review.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PersonalReviewFragment"
-    android:background="@drawable/review2"
+    android:background="@drawable/people"
     android:backgroundTint="#80FFFFFF"
     android:backgroundTintMode="src_over">
 
@@ -17,10 +17,10 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="66dp"
+            android:layout_height="53dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="@font/chewy"
             android:text="Write A Review"
             android:textAlignment="center"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="12dp"
             android:ems="10"
             android:hint="Enter the review here"
             android:inputType="textLongMessage"
@@ -61,17 +61,16 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/starsTextView"
-            app:layout_constraintVertical_bias="0.102" />
+            app:layout_constraintVertical_bias="0.004" />
 
         <TextView
             android:id="@+id/starsTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="12dp"
             android:fontFamily="@font/anton"
             android:text="Rate The Bar:"
             android:textColor="@android:color/holo_red_light"
