--- a/app/src/main/res/layout/fragment_table_order.xml
+++ b/app/src/main/res/layout/fragment_table_order.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".TableOrderFragment"
     android:background="@drawable/table_order"
     android:backgroundTint="#80FFFFFF"
-    android:backgroundTintMode="src_over">
+    android:backgroundTintMode="src_over"
+    tools:context=".TableOrderFragment">
 
 
     <android.support.constraint.ConstraintLayout
@@ -18,10 +18,10 @@
             android:id="@+id/bill_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_border"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/button_border"
             android:text="BILL"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,12 +30,12 @@
 
         <Button
             android:id="@+id/waitress_call_button"
-            android:layout_width="wrap_content"
+            android:layout_width="103dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_border"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/button_border"
             android:text="CALL WAITRESS"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -60,10 +60,10 @@
             android:id="@+id/orderBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_border"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/button_border"
             android:text="ORDER"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bill_button"
